add difficulty guidelines

--- a/app/templates/instructions.html
+++ b/app/templates/instructions.html
@@ -31,6 +31,14 @@
     <li> Please try to listen to each example <b>only once</b>. We are interested in your overall judgement, not in analytical answers.
     <li> Some questions might be more challenging than others, it is OK to listen to the examples several times in this case.
     <li> If you recognise the reference piece, please tick the box <b>"I know this piece"</b>.
+    <li> For each question, you will be asked <b>how difficult</b> it was to answer it. Please use the following scale:
+        <ul>
+          <li>Very easy: Listened to each example once, answer was immediately obvious, I am very confident.
+          <li>Easy: Listened to each example once or twice before making a straightforward decision, I am confident.
+          <li>Neutral: Listened to each example several times, decision was not easy to make but I am moderately confident.
+          <li>Difficult: Listened to each example many times, decision was very hard to make, I am not very confident.
+          <li>Impossible: Listened to each example many times, ended up making an arbitrary choice, I have no confidence in my answer.
+        </ul>
     <li> <b>You can stop at any time</b>, any submitted answers will still be recorded.
     <li> We would love to have your feedback! <b>Give us any comments in your profile</b> (link in header).
     </ul>
