--- a/app/templates/index_thank_you.html
+++ b/app/templates/index_thank_you.html
@@ -13,6 +13,11 @@
       If you would still like to participate in this study, please contact Adrien Ycart.
     </p>
 
+    <br>
+    <a class="btn btn-secondary" role="button" href="{{ url_for('information_sheet') }}">See information sheet</a>
+    <a class="btn btn-secondary" role="button" href="{{ url_for('consent') }}">See consent form</a>
+    <br>
+
 
 
 
